# career-scraper

./: .gitignore  Dockerfile  Dockerfile.lambda  README.md  pyproject.toml  template.yaml
.github/workflows/: deploy-api.yml  scrape.yml
src/career_scraper/: __init__.py  api.py  cli.py  lambda_handler.py
src/career_scraper/scrapers/: __init__.py  amazon.py  apple.py  base.py  google.py  meta.py  microsoft.py  oracle.py  salesforce.py  sap.py  visa.py
